Code review changes as on Aug 18